@@ -8,9 +8,9 @@
 \usage{
 align(x, i = NULL, j = NULL, align = "left", part = "body")
 
-align_text_col(x, align = "left", header = TRUE)
+align_text_col(x, align = "left", header = TRUE, footer = TRUE)
 
-align_nottext_col(x, align = "right", header = TRUE)
+align_nottext_col(x, align = "right", header = TRUE, footer = TRUE)
 }
 \arguments{
 \item{x}{a flextable object}
@@ -25,6 +25,8 @@ is one of 'left', 'right', 'center', 'justify'.}
 \item{part}{partname of the table (one of 'all', 'body', 'header', 'footer')}
 
 \item{header}{should the header be aligned with the body}
+
+\item{footer}{should the footer be aligned with the body}
 }
 \description{
 change text alignment of selected rows and columns of a flextable.
@@ -38,13 +40,6 @@ ft <- align_nottext_col(ft, align = "right")
 ft
 }
 \seealso{
-Other sugar functions for table style: \code{\link{bg}},
-  \code{\link{bold}}, \code{\link{color}},
-  \code{\link{empty_blanks}}, \code{\link{fontsize}},
-  \code{\link{font}}, \code{\link{italic}},
-  \code{\link{padding}}, \code{\link{rotate}},
-  \code{\link{valign}}
-
 Other sugar functions for table style: \code{\link{bg}},
   \code{\link{bold}}, \code{\link{color}},
   \code{\link{empty_blanks}}, \code{\link{fontsize}},
