@@ -19,7 +19,7 @@ rows and columns must be consecutive.
 }
 \examples{
 ft_merge <- flextable( head( mtcars ), cwidth = .5 )
-ft_merge <- merge_at( ft_merge, i = 1:2, j = 1:3 )
+ft_merge <- merge_at( ft_merge, i = 1:2, j = 1:2 )
 ft_merge
 }
 \seealso{
